--- a/src/app/core/lib/components/modais/completarCadastro/completarCadastro.component.scss
+++ b/src/app/core/lib/components/modais/completarCadastro/completarCadastro.component.scss
@@ -18,7 +18,7 @@
 .foto:hover {
     opacity: 0.5;
 }
-.mat-icon {
+.icfoto {
     color: white;
 }
 input[type="file"] {
@@ -37,7 +37,6 @@ input[type="file"] {
     margin-right: 2%;
     border-radius: 3px;
     background-color: white;
-
     width: 40px;
     height: 26px;
     display: flex;
