--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
@@ -22,7 +22,7 @@
         background-color: rgb(0, 0, 0);
         opacity: 0.4;
       }
-      .mat-icon {
+      .icfoto {
         font-size: 30px;
         color: rgb (black);
         margin-left: -10px;
@@ -82,4 +82,7 @@
             width: 50%;
         }
     }
+  .mat-menu{
+    width: 50px;
+  }
 }
