--- a/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.scss
+++ b/src/app/core/lib/components/modais/produto/cadastrar-produto/cadastrar-produto.component.scss
@@ -22,9 +22,10 @@
         background-color: rgb(0, 0, 0);
         opacity: 0.4;
       }
-      .mat-icon {
+      .icfoto {
         font-size: 30px;
-        color: rgb (black)
+        color: rgb (black);
+        margin-left: -10px;
       }
       input[type="file"] {
         display: none;
