--- a/src/app/profile/perfil/perfil.component.html
+++ b/src/app/profile/perfil/perfil.component.html
@@ -1,27 +1,54 @@
-<div class="container py-gutter">
+<div  class="container py-gutter">
   <div class="card overflow-hidden">
     <div class="h-64 relative overflow-hidden">
       <img class="w-full h-full object-cover" src="assets/img/demo/landscape.jpg" alt="#">
 
       <div class="absolute top-0 right-0 bottom-0 left-0 w-full h-full z-0">
-        <div (click)="imagemFundo.click()" class="alteraFundo bg-contrast-black center">
+        <div [matMenuTriggerFor]="menu"  class="alteraFundo bg-contrast-black center">
           <mat-icon>add_a_photo</mat-icon>
-          <input #imagemFundo type="file"(change)="capturarImagem($event, 'imagem de capa')"  />
-      </div>
-
+          <input #imagemFundo type="file"(change)="capturarImagem($event, 'imagem de capa')"/>
+          <mat-menu #menu="matMenu" class="menuFoto" >
+            <div class="menuButton">
+              <button class="text-secondary" (click)="imagemFundo.click()">
+                <mat-icon [icIcon]="icBorderColor"></mat-icon>
+                Alterar Foto
+              </button>
+              <br>
+              <button class="text-secondary" (click)="removerFoto()">
+                <mat-icon [icIcon]="icDelete"></mat-icon>
+                Remover Foto
+              </button>
+            </div>
+          </mat-menu>
+        </div>
       </div>
 
     </div>
 <!-- foto perfil -->
-    <div (click)="imagemPerfil.click()"  style="margin-right: 10%;" class="z-10 relative -mt-16 px-gutter flex items-center">
+    <div [matMenuTriggerFor]="menu" style="margin-right: 10%;" class="z-10 relative -mt-16 px-gutter flex items-center">
 
 
       <div class="centInputImg">
         <div class="absolute">
             <label [hidden]="mostraIcone">
-                <mat-icon>add_a_photo</mat-icon>
+                <mat-icon class="icfoto">add_a_photo</mat-icon>
             </label>
             <input #imagemPerfil type="file" (change)="capturarImagem($event,'imagem de perfil')" />
+
+            <mat-menu #menu="matMenu" class="menuFoto" >
+              <div class="menuButton">
+                <button class="text-secondary" (click)="imagemPerfil.click()">
+                  <mat-icon [icIcon]="icBorderColor"></mat-icon>
+                  Alterar Foto
+                </button>
+                <br>
+                <button class="text-secondary" (click)="removerFoto()">
+                  <mat-icon [icIcon]="icDelete"></mat-icon>
+                  Remover Foto
+                </button>
+              </div>
+            </mat-menu>
+
         </div>
         <div class="rounded-circle">
             <img (mouseover)="mostraIcone=false" (mouseout)="mostraIcone=true"
