adicionando menu promocional e rancando ngoninit das telas de produtos para resolver bug

--- a/src/app/core/lib/shared/card/card.component.html
+++ b/src/app/core/lib/shared/card/card.component.html
@@ -29,4 +29,39 @@
       <mat-icon [icIcon]="icDelete"></mat-icon>
     </button>
   </div>
+
+  <!-- menu de promoção -->
+  <div *ngIf="item.qtdEstoque" class="absolute top-2 right-2" mat-icon-button type="button">
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon *ngIf="!item.promocional">more_vert</mat-icon>
+      <mat-icon *ngIf="item.promocional" class="text-amber">more_vert</mat-icon>
+  </button>
+    <mat-menu #menu="matMenu">
+
+      <button *ngIf="item.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalOcultar()">
+          <mat-icon class="icon-color">visibility</mat-icon>
+          <span class="descricaoicon">Ocultar Produto</span>
+      </button>
+
+
+      <button *ngIf="!item.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalOcultar()">
+          <mat-icon class="icon-color">visibility_off</mat-icon>
+          <span class="descricaoicon">Exibir Produto</span>
+      </button>
+
+      <button *ngIf="!item.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalPromocional()">
+          <mat-icon class="icon-color">money_off</mat-icon>
+          <span class="descricaoicon">Tornar Promocional</span>
+      </button>
+
+      <button *ngIf="item.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalPromocional()">
+          <mat-icon class="icon-color">attach_money</mat-icon>
+          <span class="descricaoicon">Remover Promoção</span>
+      </button>
+  </mat-menu>
+  </div>
 </div>
